# handyman

./: Cargo.toml  README.md  renovate.json
.github/workflows/: build.yml  clippy.yml  fmt.yml  test.yml
src/: lib.rs  math.rs
src/math/: vector.rs
src/math/vector/: vec2d.rs  vec3d.rs
